tests/scroll_corpus/errors/missing_semicolon.scroll
// Missing semicolon after set declaration
scroll "bad" {
    description: "Should fail";
    require x: int;
    provide y: int;
    set y: int = x + 1
}
